# jq-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
examples/: plot_demo.py  real_price_smoke.py
jq_agent/: __init__.py  __main__.py  cli.py  config.py  i18n.py  linting.py  locale_store.py  mcp_stdio.py  permissions.py  session_compact.py  session_store.py  usage_log.py
jq_agent/data/: __init__.py  doc_chunks.json
jq_agent/indexing/: __init__.py  chunk_ast.py  fetch_github.py  paths.py  vector_build.py
jq_agent/llm/: client.py  embeddings.py  embeddings_client.py  streaming.py  subtask.py  transport.py
jq_agent/orchestration/: loop.py  task_route.py  tool_ui.py
jq_agent/prompts/: jq_sdk_fast_path.py  router.py  system.py
jq_agent/retrieval/: linkage.py  local.py  semantic.py
jq_agent/storage/: __init__.py  sqlite_store.py
jq_agent/tools/: equity_html.py  github_client.py  handlers.py  json_repair.py  metrics_rich.py  registry.py
jq_agent/web/: __init__.py  server.py
jq_agent/web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
jq_agent/web/frontend/src/: App.tsx  LogView.tsx  index.css
jq_agent/web/static/: index.html
jq_agent/web/static/assets/: index-BhrWFPLU.css  index-CHTabu5O.js  index-CZBXcqGf.css  index-CltyqgUl.css  index-Da08ht-A.js  index-DfvTE-UH.js
