[project]
name = "jq-agent"
version = "1.0.0"
description = "聚宽生态量化 Agent 开源框架：编排层 + 文档检索（关键词 + 可选底座 Embeddings API）+ 工具闭环"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "h2>=4.1.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "plotly>=6.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "typer>=0.24.0",
  "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]
mcp = [
  "mcp>=1.2.0",
]
web = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.scripts]
jq-agent = "jq_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jq_agent"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
